--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <li>Cálculo I</li>
       <li>Física II</li>
       <li>Fundamentos de Informática</li>
-      <li>Introducción a la filosofía</li>
+      <li>Antropologia</li>
       <li>Matemática II</li>
       <li>Amar o defender</li>
     </ul>
