--- a/index.html
+++ b/index.html
@@ -2,82 +2,132 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kinverli Masiel Rodríguez Escarza</title>
+  <title>Perfil de Kinverli Masiel</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f3e5f5;
-      color: #4a148c;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f5ff;
+      color: #333;
       margin: 0;
       padding: 0;
     }
 
     .container {
-      max-width: 800px;
-      margin: 40px auto;
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(74, 20, 140, 0.3);
+      max-width: 900px;
+      margin: 50px auto;
+      background-color: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
 
-    h1, h2 {
+    h1 {
       color: #6a1b9a;
-      border-bottom: 2px solid #ba68c8;
-      padding-bottom: 5px;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    .line {
+      height: 2px;
+      background-color: #ba68c8;
+      margin-bottom: 25px;
+    }
+
+    section {
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      color: #6a1b9a;
+      font-size: 20px;
+      margin-bottom: 10px;
     }
 
     ul {
       list-style-type: disc;
-      margin-left: 20px;
+      padding-left: 20px;
     }
 
-    a {
-      color: #8e24aa;
+    .highlight-box {
+      background-color: #f3e5f5;
+      padding: 15px;
+      border-left: 5px solid #ab47bc;
+      border-radius: 8px;
+      margin-bottom: 30px;
+    }
+
+    .contact-button {
+      display: inline-block;
+      background-color: #7e57c2;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 30px;
       text-decoration: none;
+      font-weight: bold;
+      margin-top: 20px;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    p {
-      font-size: 18px;
+    .contact-button:hover {
+      background-color: #6a1b9a;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Kinverli Masiel Rodríguez Escarza</h1>
-    <p>Tengo 19 años, estudio la carrera de Ingeniería Industrial y voy en mi 3er año.</p>
+    <div class="line"></div>
 
-    <h2>Aptitudes</h2>
-    <ul>
-      <li>Empática</li>
-      <li>Honesta</li>
-      <li>Proactiva</li>
-      <li>Carismática</li>
-    </ul>
+    <div class="highlight-box">
+      <p>
+        Tengo 19 años y actualmente estudio la carrera de Ingeniería Industrial en la Universidad Católica San Pablo. 
+        Me considero una persona proactiva, empática y con muchas ganas de aprender. 
+        Me apasiona encontrar soluciones prácticas a los problemas, trabajar en equipo y seguir creciendo tanto personal como profesionalmente.
+      </p>
+      <p>
+        Me interesa especialmente el área de gestión de procesos y mejora continua, y busco desarrollar habilidades 
+        que me permitan aportar valor en cualquier entorno laboral.
+      </p>
+      <p>
+        Además, disfruto participar en proyectos colaborativos y siempre busco dar lo mejor de mí en cada desafío.
+      </p>
+    </div>
 
-    <h2>Cursos que estoy llevando</h2>
-    <ul>
-      <li>Cálculo I</li>
-      <li>Física II</li>
-      <li>Fundamentos de Informática</li>
-      <li>Antropologia</li>
-      <li>Matemática II</li>
-      <li>Amar o defender</li>
-    </ul>
+    <section>
+      <h2>Aptitudes</h2>
+      <ul>
+        <li>Empática</li>
+        <li>Honesta</li>
+        <li>Proactiva</li>
+        <li>Carismática</li>
+      </ul>
+    </section>
 
-    <h2>Profesor</h2>
-    <p><a href="https://www.linkedin.com/in/ecuadrosv/" target="_blank">Ernesto Cuadros Vargas</a></p>
+    <section>
+      <h2>Cursos que estoy llevando</h2>
+      <ul>
+        <li>Cálculo I</li>
+        <li>Física II</li>
+        <li>Fundamentos de Informática</li>
+        <li>Introducción a la Filosofía</li>
+        <li>Matemática II</li>
+        <li>Amar o Defender</li>
+      </ul>
+    </section>
 
-    <h2>Compañeras de clase</h2>
-    <ul>
-      <li>Cristell Zuleyka Ranilla Vilca</li>
-      <li>Joselyn Gardenia Canchumani Tito</li>
-    </ul>
+    <section>
+      <h2>Profesor</h2>
+      <p>Ernesto Cuadros Vargas</p>
+    </section>
+
+    <section>
+      <h2>Compañeras de clase</h2>
+      <ul>
+        <li>Cristell Zuleyka Ranilla Vilca</li>
+        <li>Joselyn Gardenia Canchumani Tito</li>
+      </ul>
+    </section>
+
+    <a href="mailto:tuemail@ejemplo.com" class="contact-button">📩 Contáctame</a>
   </div>
 </body>
 </html>
