--- a/index.html
+++ b/index.html
@@ -3,95 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfil de Kinverli</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <title>Kinverli Masiel Rodríguez Escarza</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
+      font-family: 'Inter', sans-serif;
+      background: #f3e8ff;
+      color: #3b0764;
       margin: 0;
       padding: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #f6f0fc;
-      color: #333;
     }
-
     .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 2rem;
+      max-width: 900px;
+      margin: 30px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-
-    .profile {
-      text-align: center;
-      margin-bottom: 2rem;
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
     }
-
-    .profile h1 {
-      font-size: 2rem;
-      color: #5e2b97;
+    p {
+      font-size: 16px;
+      margin-bottom: 20px;
     }
-
-    .profile p {
-      font-size: 1rem;
-      margin-top: 0.5rem;
-      line-height: 1.6;
+    .section {
+      margin-bottom: 30px;
     }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
+    .section h2 {
+      font-size: 20px;
+      color: #6b21a8;
+      margin-bottom: 10px;
     }
-
-    .card {
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-      padding: 1.5rem;
-    }
-
-    .card h2 {
-      color: #5e2b97;
-      font-size: 1.25rem;
-      margin-bottom: 0.75rem;
-    }
-
     ul {
-      list-style: disc;
-      padding-left: 1.25rem;
+      padding-left: 20px;
     }
-
-    .button {
+    ul li {
+      margin-bottom: 6px;
+    }
+    .card {
+      background: #ede9fe;
+      padding: 20px;
+      border-radius: 15px;
+      margin-bottom: 15px;
+    }
+    .contact-button {
       display: inline-block;
-      margin-top: 2rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #815ac0;
+      background: #8b5cf6;
       color: white;
+      padding: 12px 20px;
       text-decoration: none;
-      border-radius: 8px;
-      transition: background-color 0.3s;
+      border-radius: 10px;
+      font-weight: 600;
     }
-
-    .button:hover {
-      background-color: #6a41a2;
+    .contact-button:hover {
+      background: #7c3aed;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="profile">
-      <h1>Kinverli Masiel Rodríguez Escarza</h1>
-      <p>
-        Tengo 19 años y actualmente estudio la carrera de Ingeniería Industrial en la Universidad Católica San Pablo.
-        Me considero una persona proactiva, empática y con muchas ganas de aprender. Me apasiona encontrar soluciones prácticas a los problemas,
-        trabajar en equipo y seguir creciendo tanto personal como profesionalmente.<br><br>
-        Me interesa especialmente el área de gestión de procesos y mejora continua, y busco desarrollar habilidades que me permitan aportar valor en cualquier entorno laboral.<br><br>
-        Además, disfruto participar en proyectos colaborativos y siempre busco dar lo mejor de mí en cada desafío.
-      </p>
-    </div>
+    <h1>Kinverli Masiel Rodríguez Escarza</h1>
+    <p>Tengo 19 años y actualmente estudio la carrera de Ingeniería Industrial en la Universidad Católica San Pablo. Me considero una persona proactiva, empática y con muchas ganas de aprender. Me apasiona encontrar soluciones prácticas a los problemas, trabajar en equipo y seguir creciendo tanto personal como profesionalmente.</p>
+    <p>Me interesa especialmente el área de gestión de procesos y mejora continua, y busco desarrollar habilidades que me permitan aportar valor en cualquier entorno laboral.</p>
+    <p>Además, disfruto participar en proyectos colaborativos y siempre busco dar lo mejor de mí en cada desafío.</p>
 
-    <div class="grid">
+    <div class="section">
+      <h2>Aptitudes</h2>
       <div class="card">
-        <h2>🌟 Aptitudes</h2>
         <ul>
           <li>Empática</li>
           <li>Honesta</li>
@@ -99,26 +80,32 @@
           <li>Carismática</li>
         </ul>
       </div>
+    </div>
 
+    <div class="section">
+      <h2>Cursos que estoy llevando</h2>
       <div class="card">
-        <h2>📚 Cursos</h2>
         <ul>
           <li>Cálculo I</li>
           <li>Física II</li>
           <li>Fundamentos de Informática</li>
-          <li>Introducción a la filosofía</li>
+          <li>Introducción a la Filosofía</li>
           <li>Matemática II</li>
-          <li>Amar o defender</li>
+          <li>Amar o Defender</li>
         </ul>
       </div>
+    </div>
 
+    <div class="section">
+      <h2>Profesor</h2>
       <div class="card">
-        <h2>👨‍🏫 Profesor</h2>
-        <p>Ernesto Cuadros Vargas</p>
+        Ernesto Cuadros Vargas
       </div>
+    </div>
 
+    <div class="section">
+      <h2>Compañeras de clase</h2>
       <div class="card">
-        <h2>👯‍♀️ Compañeras</h2>
         <ul>
           <li>Cristell Zuleyka Ranilla Vilca</li>
           <li>Joselyn Gardenia Canchumani Tito</li>
@@ -126,8 +113,8 @@
       </div>
     </div>
 
-    <div class="profile" style="margin-top: 2rem;">
-      <a class="button" href="#">Contáctame</a>
+    <div class="section">
+      <a href="mailto:kinverli@example.com" class="contact-button">📩 Contáctame</a>
     </div>
   </div>
 </body>
