--- a/index.html
+++ b/index.html
@@ -17,29 +17,32 @@
       max-width: 960px;
       margin: auto;
       background: white;
-      padding: 40px;
+      padding: 60px;
       border-radius: 30px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.1);
     }
     h1 {
-      font-size: 36px;
+      font-size: 48px;
       font-weight: 700;
       color: #6d28d9;
-      margin-bottom: 10px;
-    }
-    .subtitle {
-      font-size: 18px;
-      color: #4c1d95;
       margin-bottom: 30px;
+      text-align: center;
+    }
+    .intro-text {
+      font-size: 20px;
+      line-height: 1.8;
+      color: #4c1d95;
+      margin-bottom: 40px;
+      text-align: justify;
     }
     .section {
       margin-bottom: 30px;
     }
     .section h2 {
-      font-size: 20px;
+      font-size: 24px;
       font-weight: 700;
       color: #5b21b6;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
     .card {
       background: #f5f3ff;
@@ -53,19 +56,20 @@
       margin: 0;
     }
     li {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 8px;
     }
     .contact-button {
       display: inline-block;
       background: #8b5cf6;
       color: white;
-      padding: 14px 24px;
+      padding: 16px 28px;
       border-radius: 12px;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 18px;
       text-decoration: none;
       transition: background 0.3s;
+      text-align: center;
     }
     .contact-button:hover {
       background: #7c3aed;
@@ -79,7 +83,7 @@
 <body>
   <div class="container">
     <h1>Kinverli Masiel Rodríguez Escarza</h1>
-    <div class="subtitle">
+    <div class="intro-text">
       Tengo 19 años y actualmente estudio la carrera de Ingeniería Industrial en la Universidad Católica San Pablo. Me considero una persona proactiva, empática y con muchas ganas de aprender. Me apasiona encontrar soluciones prácticas a los problemas, trabajar en equipo y seguir creciendo tanto personal como profesionalmente.
       <br><br>
       Me interesa especialmente el área de gestión de procesos y mejora continua, y busco desarrollar habilidades que me permitan aportar valor en cualquier entorno laboral.
@@ -130,7 +134,7 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section" style="text-align:center;">
       <a href="mailto:kinverli@example.com" class="contact-button">Contáctame</a>
     </div>
   </div>
