--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
       font-size: 18px;
       margin-bottom: 8px;
     }
+    a {
+      color: #6d28d9;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
     .contact-button {
       display: inline-block;
       background: #8b5cf6;
@@ -80,7 +88,6 @@
       content: "📩";
       margin-right: 10px;
     }
-
     #contacto {
       display: none;
       text-align: center;
@@ -88,12 +95,10 @@
       opacity: 0;
       transition: opacity 0.5s ease;
     }
-
     #contacto.mostrar {
       display: block;
       opacity: 1;
     }
-
     .contact-card {
       background: #ede9fe;
       display: inline-block;
@@ -102,13 +107,11 @@
       text-align: left;
       box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
-
     .contact-card a {
       color: #6d28d9;
       font-weight: bold;
       text-decoration: none;
     }
-
     .contact-card a:hover {
       text-decoration: underline;
     }
@@ -154,7 +157,9 @@
     <div class="section">
       <h2>👨‍🏫 Profesor</h2>
       <div class="card">
-        Ernesto Cuadros Vargas
+        <a href="https://www.linkedin.com/in/ecuadrosv/" target="_blank">
+          Ernesto Cuadros Vargas
+        </a>
       </div>
     </div>
 
@@ -164,6 +169,16 @@
         <ul>
           <li>Cristell Zuleyka Ranilla Vilca</li>
           <li>Joselyn Gardenia Canchumani Tito</li>
+          <li>
+            <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">
+              Yesenia Belén Portillo Duran
+            </a>
+          </li>
+          <li>
+            <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">
+              Fanny Milagros Cacya Arequipa
+            </a>
+          </li>
         </ul>
       </div>
     </div>
