--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
     li {
       font-size: 18px;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
     a {
       color: #6d28d9;
@@ -170,14 +170,14 @@
           <li>Cristell Zuleyka Ranilla Vilca</li>
           <li>Joselyn Gardenia Canchumani Tito</li>
           <li>
-            <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">
-              Yesenia Belén Portillo Duran
-            </a>
+            <strong>Yesenia Belén Portillo Duran</strong><br>
+            🌐 <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">Visitar página</a><br>
+            🔗 <a href="https://www.linkedin.com/in/yeseniabpd/" target="_blank">LinkedIn</a>
           </li>
           <li>
-            <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">
-              Fanny Milagros Cacya Arequipa
-            </a>
+            <strong>Fanny Milagros Cacya Arequipa</strong><br>
+            🌐 <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">Visitar página</a><br>
+            🔗 <a href="https://www.linkedin.com/in/fannymca/" target="_blank">LinkedIn</a>
           </li>
         </ul>
       </div>
