--- a/index.html
+++ b/index.html
@@ -167,17 +167,15 @@
       <h2>👩‍🎓 Compañeras de clase</h2>
       <div class="card">
         <ul>
-          <li>Cristell Zuleyka Ranilla Vilca</li>
-          <li>Joselyn Gardenia Canchumani Tito</li>
           <li>
             <strong>Yesenia Belén Portillo Duran</strong><br>
             🌐 <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/yeseniabpd/" target="_blank">LinkedIn</a>
+            🔗 <a href="https://www.linkedin.com/in/yesenia-belen-portillo-duran-605601357/" target="_blank">LinkedIn</a>
           </li>
           <li>
             <strong>Fanny Milagros Cacya Arequipa</strong><br>
             🌐 <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/fannymca/" target="_blank">LinkedIn</a>
+            🔗 <a href="https://www.linkedin.com/in/fanny-milagros-cacya-arequipa/" target="_blank">LinkedIn</a>
           </li>
         </ul>
       </div>
