--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
           <li>
             <strong>Yesenia Belén Portillo Duran</strong><br>
             🌐 <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/yesenia-belen-portillo-duran-605601357/" target="_blank">LinkedIn</a>
+            🔗 <a href="https://www.linkedin.com/in/yesenia-bel%C3%A9n-portillo-duran-605601357/" target="_blank">LinkedIn</a>
           </li>
           <li>
             <strong>Fanny Milagros Cacya Arequipa</strong><br>
             🌐 <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/fanny-milagros-cacya-arequipa/" target="_blank">LinkedIn</a>
+            🔗 <a href="https://www.linkedin.com/in/fanny-milagros-cacya-arequipa-a42a98253/" target="_blank">LinkedIn</a>
           </li>
         </ul>
       </div>
