--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to top right, #f3e8ff, #ede9fe);
+      background: linear-gradient(to top right, #c4b5fd, #a78bfa);
       color: #1e1b4b;
       margin: 0;
       padding: 40px 20px;
@@ -168,14 +168,24 @@
       <div class="card">
         <ul>
           <li>
-            <strong>Yesenia Belén Portillo Duran</strong><br>
-            🌐 <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/yesenia-bel%C3%A9n-portillo-duran-605601357/" target="_blank">LinkedIn</a>
+            <strong>
+              <a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">
+                🌐 Yesenia Belén Portillo Duran
+              </a>
+            </strong><br>
+            🔗 <a href="https://www.linkedin.com/in/yesenia-belen-portillo-duran-605601357/" target="_blank">
+              Ver perfil en LinkedIn
+            </a>
           </li>
           <li>
-            <strong>Fanny Milagros Cacya Arequipa</strong><br>
-            🌐 <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">Visitar página</a><br>
-            🔗 <a href="https://www.linkedin.com/in/fanny-milagros-cacya-arequipa-a42a98253/" target="_blank">LinkedIn</a>
+            <strong>
+              <a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">
+                🌐 Fanny Milagros Cacya Arequipa
+              </a>
+            </strong><br>
+            🔗 <a href="https://www.linkedin.com/in/fanny-cacya-arequipa-898813328/" target="_blank">
+              Ver perfil en LinkedIn
+            </a>
           </li>
         </ul>
       </div>
