--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kinverli Masiel Rodríguez Escarza</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -20,13 +21,6 @@
       padding: 60px;
       border-radius: 30px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-    }
-    h1 {
-      font-size: 48px;
-      font-weight: 700;
-      color: #6d28d9;
-      margin-bottom: 30px;
-      text-align: center;
     }
     .intro-text {
       font-size: 20px;
@@ -119,7 +113,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Kinverli Masiel Rodríguez Escarza</h1>
+    <h1 style="font-family: 'Pacifico', cursive; font-size: 48px; color: #6d28d9; text-align: center;">
+      Kinverli Masiel Rodríguez Escarza
+    </h1>
+
     <div class="intro-text">
       Tengo 19 años y actualmente estudio la carrera de Ingeniería Industrial en la Universidad Católica San Pablo. Me considero una persona proactiva, empática y con muchas ganas de aprender. Me apasiona encontrar soluciones prácticas a los problemas, trabajar en equipo y seguir creciendo tanto personal como profesionalmente.
       <br><br>
