--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kinverli Masiel Rodríguez Escarza</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Dancing+Script&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -113,7 +113,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="font-family: 'Pacifico', cursive; font-size: 48px; color: #6d28d9; text-align: center;">
+    <h1 style="font-family: 'Dancing Script', cursive; font-size: 52px; color: #6d28d9; text-align: center;">
       Kinverli Masiel Rodríguez Escarza
     </h1>
 
